Recreate react config